--- a/Services/Catalog/Catalog.API/Properties/launchSettings.json
+++ b/Services/Catalog/Catalog.API/Properties/launchSettings.json
@@ -22,11 +22,11 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80"
-      },
+      //"environmentVariables": {
+      //  "ASPNETCORE_URLS": "https://+:443;http://+:80"
+      //},
       "publishAllPorts": true,
-      "useSSL": true
+      //"useSSL": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
