--- a/Services/Catalog/Catalog.API/Properties/launchSettings.json
+++ b/Services/Catalog/Catalog.API/Properties/launchSettings.json
@@ -8,7 +8,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:7000"
+      "applicationUrl": "http://localhost:7000",
+      //"applicationUrl": "http://localhost:7000/swagger/index.html"
     },
     "IIS Express": {
       "commandName": "IISExpress",
