--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 version: '3.4'
+networks:
+  eshoppingNet:
+    driver: bridge
 
 services:
   catalogDb:
@@ -6,6 +9,10 @@ services:
 
   basketDb:
     image: redis:alpine
+
+
+  portainer:
+    image: portainer/portainer-ce
 
 
   catalogApi:
@@ -23,4 +30,4 @@ services:
 
 volumes:
   mongo_data:
-  redis_data:
+  portainer_data:
